Add a wrap-search option to turn off wrapping of searches in copy mode. From Jacobo de Vera.

--- a/tmux.1
+++ b/tmux.1
@@ -2661,6 +2661,12 @@ will generate
 function key sequences; these have a number included to indicate modifiers such
 as Shift, Alt or Ctrl.
 The default is off.
+.Pp
+.It Xo Ic wrap-search
+.Op Ic on | off
+.Xc
+If this option is set, searches will wrap around the end of the pane contents.
+The default is on.
 .El
 .It Xo Ic show-options
 .Op Fl gsw
