Sync OpenBSD patchset 1083:
Add pane_current_path format, suggested by Mikolaj Kucharski.

--- a/tmux.1
+++ b/tmux.1
@@ -2783,6 +2783,7 @@ The following variables are available, where appropriate:
 .It Li "host" Ta "Hostname of local host"
 .It Li "line" Ta "Line number in the list"
 .It Li "pane_active" Ta "1 if active pane"
+.It Li "pane_current_path" Ta "Current path if available"
 .It Li "pane_dead" Ta "1 if pane is dead"
 .It Li "pane_height" Ta "Height of pane"
 .It Li "pane_id" Ta "Unique pane ID"
