Sync OpenBSD patchset 1097:
Add window-status-separator option, from Thomas Adam.

--- a/tmux.1
+++ b/tmux.1
@@ -2704,6 +2704,10 @@ option for details of special character sequences available.
 The default is
 .Ql #I:#W#F .
 .Pp
+.It Ic window-status-separator Ar string
+Sets the separator drawn between windows in the status line.
+The default is a single space character.
+.Pp
 .It Xo Ic xterm-keys
 .Op Ic on | off
 .Xc
