Sync OpenBSD patchset 1105:
default-path has the same possibilities as new-window -c now.

--- a/tmux.1
+++ b/tmux.1
@@ -1948,16 +1948,10 @@ Set the default working directory for new panes.
 If empty (the default), the working directory is determined from the process
 running in the active pane, from the command line environment or from the
 working directory where the session was created.
-If
-.Ar path
-is "$HOME" or "~", the value of the
-.Ev HOME
-environment variable is used.
-If
-.Ar path
-is ".", the working directory when
-.Nm
-was started is used.
+Otherwise the same options are available as for the
+.Fl c
+flag to
+.Ic new-window .
 .It Ic default-shell Ar path
 Specify the default shell.
 This is used as the login shell for new windows when the
