--- a/tmux.1
+++ b/tmux.1
@@ -585,6 +585,7 @@ recently used
 session.
 .It Xo Ic detach-client
 .Op Fl P
+.Op Fl a
 .Op Fl s Ar target-session
 .Op Fl t Ar target-client
 .Xc
@@ -593,6 +594,10 @@ Detach the current client if bound to a key, the client specified with
 .Fl t ,
 or all clients currently attached to the session specified by
 .Fl s .
+The
+.Fl a
+option kills all but the client given with
+.Fl t .
 If
 .Fl P
 is given, send SIGHUP to the parent process of the client, typically causing it
