--- a/TODO
+++ b/TODO
@@ -141,6 +141,7 @@
 - support multibyte key strings
 - allow commands to be executed when certaing patterns in a screen
   are clicked on with the mouse
+- flag to make next/previous commands skip a window
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
