Document pane_index variable, from sam at sltosis dot org.

--- a/tmux.1
+++ b/tmux.1
@@ -2909,6 +2909,7 @@ The following variables are available, where appropriate:
 .It Li "pane_dead" Ta "1 if pane is dead"
 .It Li "pane_height" Ta "Height of pane"
 .It Li "pane_id" Ta "Unique pane ID"
+.It Li "pane_index" Ta "Index of pane"
 .It Li "pane_pid" Ta "PID of first process in pane"
 .It Li "pane_start_command" Ta "Command pane started with"
 .It Li "pane_start_path" Ta "Path pane started with"
