Sync OpenBSD patchset 1155:
Add some missing formats from Samuel Le Thiec.

--- a/tmux.1
+++ b/tmux.1
@@ -2330,6 +2330,7 @@ may contain any of the following special character sequences:
 .It Li "#h" Ta "Hostname of local host without the domain name"
 .It Li "#F" Ta "Current window flag"
 .It Li "#I" Ta "Current window index"
+.It Li "#D" Ta "Current pane unique identifier"
 .It Li "#P" Ta "Current pane index"
 .It Li "#S" Ta "Session name"
 .It Li "#T" Ta "Current pane title"
@@ -2907,6 +2908,8 @@ The following variables are available, where appropriate:
 .It Li "client_utf8" Ta "1 if client supports utf8"
 .It Li "client_width" Ta "Width of client"
 .It Li "host" Ta "Hostname of local host"
+.It Li "history_bytes" Ta "Number of bytes in window history"
+.It Li "history_limit" Ta "Maximum window history lines"
 .It Li "line" Ta "Line number in the list"
 .It Li "pane_active" Ta "1 if active pane"
 .It Li "pane_current_path" Ta "Current path if available"
@@ -2933,6 +2936,7 @@ The following variables are available, where appropriate:
 .It Li "window_find_matches" Ta "Matched data from the find-window command if available"
 .It Li "window_flags" Ta "Window flags"
 .It Li "window_height" Ta "Height of window"
+.It Li "window_id" Ta "Unique window ID"
 .It Li "window_index" Ta "Index of window"
 .It Li "window_layout" Ta "Window layout description"
 .It Li "window_name" Ta "Name of window"
