Sync OpenBSD patchset 1158:
Another missing format from sam at sltosis.org.

--- a/tmux.1
+++ b/tmux.1
@@ -2910,6 +2910,7 @@ The following variables are available, where appropriate:
 .It Li "host" Ta "Hostname of local host"
 .It Li "history_bytes" Ta "Number of bytes in window history"
 .It Li "history_limit" Ta "Maximum window history lines"
+.It Li "history_size" Ta "Size of history in bytes"
 .It Li "line" Ta "Line number in the list"
 .It Li "pane_active" Ta "1 if active pane"
 .It Li "pane_current_path" Ta "Current path if available"
