--- a/TODO
+++ b/TODO
@@ -145,6 +145,7 @@
 - way to do tmux command/run-shell from mode keys
 - send command to all windows
 - choose-pane command
+- wrap/no wrap esc seq DEC CSI ? 7 h/l
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
