--- a/TODO
+++ b/TODO
@@ -141,6 +141,10 @@
 - way to do tmux command/run-shell from mode keys
 - send command to all windows
 - choose-pane command
+	- Augment choose-tree to do this?  TA to investigate.
+- choose-mode and copy-mode are very similar.  Perhaps make choose-mode a
+  subset of copy-mode in that it inherits key-bindings and other traits but
+  not all.
 - wrap/no wrap esc seq DEC CSI ? 7 h/l
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
