Fix typo bell->bells from Thomas Adam.

--- a/tmux.1
+++ b/tmux.1
@@ -2039,7 +2039,7 @@ window of that session,
 .Ic none
 means all bells are ignored and
 .Ic current
-means only bell in windows other than the current window are ignored.
+means only bells in windows other than the current window are ignored.
 .It Xo Ic bell-on-alert
 .Op Ic on | off
 .Xc
