Add window-status-last-* options, from Boris Faure.

--- a/tmux.1
+++ b/tmux.1
@@ -2823,6 +2823,15 @@ Like
 .Ar window-status-format ,
 but is the format used when the window is the current window.
 .Pp
+.It Ic window-status-last-attr Ar attributes
+Set status line attributes for the last active window.
+.Pp
+.It Ic window-status-last-bg Ar colour
+Set status line background colour for the last active window.
+.Pp
+.It Ic window-status-last-fg Ar colour
+Set status line foreground colour for the last active window.
+.Pp
 .It Ic window-status-fg Ar colour
 Set status line foreground colour for a single window.
 .Pp
